# infrared

./: .gitignore  .travis.yml  README.md  environment.yml  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml
docs/: conf.py  index.rst
