[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_sphinx]
project = 'Soar Near Infrared Tools'
source-dir = docs
build-dir = docs/_build

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[metadata]
package_name = infrared
description = Tools for reducing infrared data.
long_description = Tools for reducing infrared data for SOAR Telescope.
author = Simon Torres
author_email = storres@ctio.noao.edu
license = BSD-3-Clause
# url =
edit_on_github = False
github_project = soar-telescope/infrared
install_requires =
    numpy
    pandas==0.23.0
    matplotlib
    scipy==1.3.1
    cython
    astropy
    ccdproc
    astroplan
# version should be PEP440 compatible (http://www.python.org/dev/peps/pep-0440)
version = 0.1.1
